Project

General

Profile

Actions

Bug #18738

closed

[ FAILED ] TestJournalTrimmer.RemoveObjectsWithOtherClient

Added by Jason Dillaman about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Low
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://jenkins.ceph.com/job/ceph-pull-requests/17740/console

[ RUN      ] TestJournalTrimmer.RemoveObjectsWithOtherClient
/home/jenkins-build/build/workspace/ceph-pull-requests/src/test/journal/test_JournalTrimmer.cc:192: Failure
      Expected: -16
To be equal to: ctx1.wait()
      Which is: 0
[  FAILED  ] TestJournalTrimmer.RemoveObjectsWithOtherClient (7 ms)

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #18769: kraken: [ FAILED ] TestJournalTrimmer.RemoveObjectsWithOtherClientResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman about 7 years ago

  • Backport set to kraken,jewel
Actions #2

Updated by Jason Dillaman about 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18769: kraken: [ FAILED ] TestJournalTrimmer.RemoveObjectsWithOtherClient added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18770: jewel: [ FAILED ] TestJournalTrimmer.RemoveObjectsWithOtherClient added
Actions #6

Updated by Nathan Cutler about 7 years ago

@Jason Borden - another one that appears to depend on https://github.com/ceph/ceph/pull/9585 which has not been backported to jewel (kraken backport is OK)

Actions #7

Updated by Jason Dillaman about 7 years ago

  • Backport changed from kraken,jewel to kraken

@Nathan Weinberg: I am fine w/ removing the jewel backport

Actions #8

Updated by Nathan Cutler about 7 years ago

  • Copied to deleted (Backport #18770: jewel: [ FAILED ] TestJournalTrimmer.RemoveObjectsWithOtherClient)
Actions #9

Updated by Nathan Cutler about 7 years ago

Removed the "copied to" link so the automated scripting doesn't complain about it.

Actions #10

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF