journal: stop processing removal after error

Fixed: http://tracker.ceph.com/issues/18738
Signed-off-by: Jason Dillaman <dillaman@redhat.com>